# clinical-trials-api

./: .env.example  .gitignore  CLAUDE.md  DEMO.md  Dockerfile  GOALS.md  LEARNING.md  MEMORY.md  README.md  TEST.md  architecture.excalidraw  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  requirements.txt  shubhankar-tripathy-review.md  take-home.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_jsonb_arrays_and_secondary_outcomes.py  003_add_conditions_column.py  004_add_schema_enrichment_columns.py
app/: main.py
app/api/v1/: export.py  health.py  ingest.py  router.py  trials.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  trial.py
app/schemas/: trial.py
app/services/: ingestion.py  loader.py  parser.py
diagrams/: scenes.py
scripts/: demo_parallel.py  demo_progressive.py  initial_load.sh  monitor_ingestion.py  run_ingestion.py
tests/: conftest.py  test_export.py  test_health.py  test_ingestion.py  test_loader.py  test_parser.py  test_trials_api.py
